--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Home</title>
+	<meta name='dmca-site-verification' content='bWhIdllQSlYrNC9NMTY2V3FnaDlpdz090' />
 </head>
 <body>
 	<a href="https://mylyn-asia.com/"> </a>
