--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
 	<meta name='dmca-site-verification' content='bWhIdllQSlYrNC9NMTY2V3FnaDlpdz090' />
 </head>
 <body>
-	<a href="https://mylyn-asia.com/"> </a>
-	<a href="https://mylyn-asia.de/"> </a>
+	<a href="https://goldenmag.cz/"> </a>
+<a href="https://zvyroby.cz/"> </a>
+<a href="https://technologie24.cz/"> </a>
+<a href="https://zahranicni-zpravy.cz/"> </a>
+<a href="https://vikendplus.cz/"> </a>
+<a href="https://radnicnilist.cz/"> </a>
+<a href="https://ekonomickespravy.sk/"> </a>
+<a href="https://spokojene-zeny.cz/"> </a>
+<a href="https://specialmuzi.cz/"> </a>
+<a href="https://fin-mag.cz/"> </a>
 
 
 
